fix: keep content from overlapping with scroll bar

--- a/app/styles/root.css
+++ b/app/styles/root.css
@@ -37,7 +37,6 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  width: 100vw;
   min-height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
